# SHAPE

./: README.md  pyproject.toml
notebooks/: analysis.ipynb
reports/: analysis.html  heitor_veiga_teste_shape.html
src/shape_case/: data.py
